--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@teachablemachine/image": "^0.8.4",
+    "@tensorflow/tfjs": "^3.7.0",
+    "axios": "^0.21.1",
+    "canvas": "^2.8.0",
+    "face-api.js": "^0.22.2",
     "next": "10.x",
     "react": "17.x",
     "react-dom": "17.x"
